# ConnectN-game

./: README.md
NCursesConnectN/: CMakeLists.txt  board.c  board.h  main.c  windows.c  windows.h  winner.c  winner.h
